--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -18,6 +18,9 @@ jobs:
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
+      
     - name: Install Terraform
       uses: little-core-labs/install-terraform@v2.0.0
       with:
