--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -37,3 +37,35 @@ jobs:
     - name: Terraform plan
       run: |
         terraform plan
+
+  apply_terraform:
+    environment: prod 
+    needs: plan_terraform
+    defaults:
+      run:
+        working-directory: ./terraform
+    name: Terraform Apply
+    runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    steps:
+    - name: Check out terraform files
+      uses: actions/checkout@v2
+
+    - name: Install Terraform
+      uses: little-core-labs/install-terraform@v2.0.0
+      with:
+          version: 0.14.3
+
+    - name: Terraform init
+      run: |
+        terraform init
+
+    - name: Terraform select workspace
+      run: |
+        terraform workspace select prod
+
+    - name: Terraform apply
+      run: |
+        terraform apply --auto-approve=true
