--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -22,9 +22,11 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install Terraform
-      uses: little-core-labs/install-terraform@v2.0.0
-      with:
-          version: 0.14.3
+      run : |
+        wget https://releases.hashicorp.com/terraform/0.14.3/terraform_0.14.3_linux_amd64.zip
+        unzip terraform_0.14.3_linux_amd64.zip
+        sudo mv ./terraform /usr/local/bin
+        rm -rf terraform_0.14.3_linux_amd64.zip
 
     - name: Terraform init
       run: |
